--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^51.0.11",
+    "expo": "^51.0.13",
     "expo-av": "^14.0.5",
     "expo-constants": "~16.0.2",
     "expo-document-picker": "^12.0.1",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "^3.5.16",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -25,8 +26,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.5"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
